Fixed the project search page and active projects page information letter spacing.

--- a/public/cw/stylesheets/main.css
+++ b/public/cw/stylesheets/main.css
@@ -726,3 +726,8 @@ g.c3-axis-y > g:last-child {
 #topSixResults .columns:nth-child(4){
   clear: left;
 }
+
+.search-result,
+#showResults {
+  letter-spacing: 0.02em;
+}
